--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.4.17",
         "vite": "^4.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "@ocrv/vue-tailwind-pagination": "^0.0.4",
+        "sweetalert2": "^11.17.2"
     }
 }
